fix the navbar on small screens

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -14,3 +14,7 @@
 .hide-navbar {
   right: -100%;
 }
+
+li {
+  overflow-y: hidden;
+}
